--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <title>Anuvab Sen</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Anuvab Sen is a United States based Indian Author whose primary domain of work is in Deep Learning and Multi-Objective Optimization. Sen is a 2xTEDx Speaker and author of multiple books and research articles. Sen received IEEE CIS Tr Award (2023), MITACS GRI Award (2023) and DAAD WISE Scholarship (2023).">
+    <meta name="description" content="Anuvab Sen is a United States-based Indian Author whose primary domain of work is in Deep Learning and Multi-Objective Optimization. Sen is a 2xTEDx Speaker and author of multiple books and research articles. Sen received IEEE CIS Tr Award (2023), MITACS GRI Award (2023), and DAAD WISE Scholarship (2023).">
     <link rel="icon" href="image/Anuvab_Sen.png" type="image/png">
     <!-- External CSS and Fonts -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:300&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:300,400&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-eNLmY14ucj4Xt7jw8l6AAEJl0mKZIRj4hYxDvV6k+L4N5OHzRR8aBl8whD8oB8HX" crossorigin="anonymous">
 
     <style>
         body, html {
             margin: 0;
             padding: 0;
-            font-family: 'Montserrat', sans-serif;
+            font-family: 'Roboto', sans-serif;
             color: #333;
             background-color: #f5f5f5;
         }
@@ -107,13 +107,13 @@
             font-size: 48px;
             font-weight: 700;
             margin-bottom: 20px;
+            font-family: 'Montserrat', sans-serif;
         }
 
         .hero p {
             font-size: 20px;
             font-weight: 300;
             margin-bottom: 30px;
-            font-family: 'Roboto', sans-serif;
         }
 
         .hero .btn {
@@ -147,13 +147,15 @@
             color: #007BFF;
             margin-bottom: 30px;
             text-align: center;
+            font-family: 'Montserrat', sans-serif;
         }
 
         .about-content, .news-content, .cv-content {
             font-size: 18px;
             line-height: 1.6;
-            font-family: 'Roboto', sans-serif;
             color: #555;
+            max-width: 800px;
+            margin: auto;
         }
 
         .about-content p {
@@ -162,6 +164,13 @@
         }
 
         /* Work Experience */
+        .experience-container {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+        }
+
         .experience-item {
             background-color: #ffffff;
             padding: 20px;
@@ -169,6 +178,8 @@
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
             transition: transform 0.3s;
+            flex: 1 1 calc(45% - 20px);
+            max-width: calc(45% - 20px);
         }
 
         .experience-item:hover {
@@ -179,6 +190,7 @@
             font-size: 24px;
             margin-bottom: 10px;
             color: #333;
+            font-family: 'Montserrat', sans-serif;
         }
 
         .experience-item p {
@@ -190,14 +202,52 @@
             margin-right: 10px;
         }
 
+        @media (max-width: 768px) {
+            .experience-item {
+                flex: 1 1 100%;
+                max-width: 100%;
+            }
+        }
+
+        /* News and Other Roles */
+        .info-section {
+            background-color: #ffffff;
+            padding: 30px;
+            border-radius: 8px;
+            margin-bottom: 60px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            max-width: 800px;
+            margin: auto;
+        }
+
+        .info-section h3 {
+            font-size: 24px;
+            color: #007BFF;
+            margin-bottom: 20px;
+            font-family: 'Montserrat', sans-serif;
+        }
+
+        .info-section p {
+            font-size: 18px;
+            margin-bottom: 15px;
+            color: #555;
+        }
+
+        .info-section i {
+            color: #007BFF;
+            margin-right: 10px;
+        }
+
         /* CV Section */
         .cv-item {
             background-color: #ffffff;
-            padding: 20px;
+            padding: 30px;
             margin-bottom: 20px;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
             transition: transform 0.3s;
+            max-width: 800px;
+            margin: auto;
         }
 
         .cv-item:hover {
@@ -206,8 +256,9 @@
 
         .cv-item h3 {
             font-size: 24px;
-            margin-bottom: 10px;
+            margin-bottom: 20px;
             color: #333;
+            font-family: 'Montserrat', sans-serif;
         }
 
         .cv-item ul {
@@ -245,19 +296,22 @@
             flex-wrap: wrap;
             gap: 20px;
             margin-top: 20px;
+            justify-content: center;
         }
 
         .tweet-box {
-            flex: 1 1 calc(50% - 20px);
+            flex: 1 1 calc(45% - 20px);
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
             border-radius: 10px;
             overflow: hidden;
             background-color: #ffffff;
+            max-width: calc(45% - 20px);
         }
 
         @media (max-width: 768px) {
             .tweet-box {
                 flex: 1 1 100%;
+                max-width: 100%;
             }
         }
 
@@ -275,14 +329,55 @@
             font-size: 16px;
         }
 
+        /* Collapsible Sections */
+        .collapsible {
+            background-color: #007BFF;
+            color: #ffffff;
+            cursor: pointer;
+            padding: 18px;
+            width: 100%;
+            border: none;
+            text-align: left;
+            outline: none;
+            font-size: 18px;
+            margin-bottom: 10px;
+            border-radius: 5px;
+            font-family: 'Montserrat', sans-serif;
+        }
+
+        .collapsible:hover {
+            background-color: #0056b3;
+        }
+
+        .collapsible:after {
+            content: '\002B';
+            font-size: 13px;
+            color: #ffffff;
+            float: right;
+            margin-left: 5px;
+        }
+
+        .collapsible.active:after {
+            content: "\2212";
+        }
+
+        .collapsible + .content {
+            max-height: 0;
+            overflow: hidden;
+            transition: max-height 0.2s ease-out;
+            background-color: #ffffff;
+            padding: 0 18px;
+            border-radius: 0 0 5px 5px;
+        }
+
         /* Responsive Design */
-        @media (max-width: 768px) {
+        @media (max-width: 600px) {
             .hero h1 {
-                font-size: 36px;
+                font-size: 32px;
             }
 
             .hero p {
-                font-size: 18px;
+                font-size: 16px;
             }
 
             .navbar-menu {
@@ -315,9 +410,13 @@
             .navbar-container {
                 padding: 10px 20px;
             }
+
+            .info-section, .cv-item {
+                padding: 20px;
+            }
         }
 
-        @media (min-width: 769px) {
+        @media (min-width: 601px) {
             .navbar-toggle {
                 display: none;
             }
@@ -385,36 +484,51 @@
         <!-- Work Experience Section -->
         <section class="section" id="experience">
             <h2>Work Experience</h2>
-            <div class="experience-item">
-                <h3>Mitacs Globalink Research Intern</h3>
-                <p><i class="fa fa-calendar"></i> May 2023 - Aug 2023</p>
-                <p><i class="fa fa-map-marker-alt"></i> Hamilton, Canada</p>
-                <p><i class="fa fa-user"></i> Supervisor: Dr. Chi Tang</p>
-                <p><i class="fa fa-flask"></i> Artificial Neural Networks, LSTM, Hyper-parameter Optimization, Smart Grid</p>
-            </div>
-            <div class="experience-item">
-                <h3>Machine Learning Intern, Unify AI, UK</h3>
-                <p><i class="fa fa-calendar"></i> May 2022 - Jul 2022</p>
-                <p><i class="fa fa-map-marker-alt"></i> London, UK</p>
-                <p><i class="fa fa-code"></i> Developed models for automatic code conversions between frameworks and multi-framework support.</p>
-            </div>
-            <div class="experience-item">
-                <h3>Summer Research Intern, Indian Statistical Institute</h3>
-                <p><i class="fa fa-calendar"></i> Jul 2021 - Sep 2021</p>
-                <p><i class="fa fa-map-marker-alt"></i> Kolkata, India</p>
-                <p><i class="fa fa-user"></i> Supervisor: Dr. Subhamoy Maitra</p>
-                <p><i class="fa fa-flask"></i> Quantum Algorithms: Deutsch-Josza, Grover's Algorithm, Bernstein Vazirani, Quantum Fourier Transform.</p>
-                <p><i class="fa fa-book"></i> Studied HHL Algorithm, Quantum Phase Estimation & Generated Mutually Unbiased Bases (MUBs).</p>
+            <div class="experience-container">
+                <div class="experience-item">
+                    <h3>Mitacs Globalink Research Intern</h3>
+                    <p><i class="fa fa-calendar"></i> May 2023 - Aug 2023</p>
+                    <p><i class="fa fa-map-marker-alt"></i> Hamilton, Canada</p>
+                    <p><i class="fa fa-user"></i> Supervisor: Dr. Chi Tang</p>
+                    <p><i class="fa fa-flask"></i> Artificial Neural Networks, LSTM, Hyper-parameter Optimization, Smart Grid</p>
+                </div>
+                <div class="experience-item">
+                    <h3>Machine Learning Intern, Unify AI, UK</h3>
+                    <p><i class="fa fa-calendar"></i> May 2022 - Jul 2022</p>
+                    <p><i class="fa fa-map-marker-alt"></i> London, UK</p>
+                    <p><i class="fa fa-code"></i> Developed models for automatic code conversions between frameworks and multi-framework support.</p>
+                </div>
+                <div class="experience-item">
+                    <h3>Summer Research Intern, Indian Statistical Institute</h3>
+                    <p><i class="fa fa-calendar"></i> Jul 2021 - Sep 2021</p>
+                    <p><i class="fa fa-map-marker-alt"></i> Kolkata, India</p>
+                    <p><i class="fa fa-user"></i> Supervisor: Dr. Subhamoy Maitra</p>
+                    <p><i class="fa fa-flask"></i> Quantum Algorithms: Deutsch-Josza, Grover's Algorithm, Bernstein Vazirani, Quantum Fourier Transform.</p>
+                    <p><i class="fa fa-book"></i> Studied HHL Algorithm, Quantum Phase Estimation & Generated Mutually Unbiased Bases (MUBs).</p>
+                </div>
             </div>
         </section>
 
-        <!-- Latest News Section -->
+        <!-- News Section -->
         <section class="section" id="news">
-            <h2>Latest News</h2>
-            <div class="news-content">
-                <p>[Aug. 2024] I started my PhD at Georgia Institute of Technology, Atlanta, USA!</p>
-                <p>[July 2024] I completed my graduation at IIEST Shibpur, India!</p>
-                <p>[Jan 2024] My undergrad thesis got accepted as a workshop paper at IGARSS, Athens, Greece!</p>
+            <h2>News</h2>
+            <div class="info-section">
+                <h3><i class="fa fa-bullhorn"></i> Latest News</h3>
+                <p><i class="fa fa-newspaper"></i> Selected for <a href="https://sites.google.com/view/researchweek2022" target="_blank">Google Research Week'24</a></p>
+                <p><i class="fa fa-award"></i> Recipient of IEEE GRSS Travel Grant</p>
+            </div>
+        </section>
+
+        <!-- Other Roles Section -->
+        <section class="section" id="roles">
+            <div class="info-section">
+                <h3><i class="fa fa-user-tie"></i> Other Roles</h3>
+                <p><i class="fa fa-users"></i> Member, IEEE, CIS Committee<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;<small>January 2024 - Present</small></p>
+                <p><i class="fa fa-chalkboard-teacher"></i> Co-Lead, Google Developer Club<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;<small>September 2022 - Feb 2024</small></p>
+                <p><i class="fa fa-user-cog"></i> Chairperson, IEEE CIS IIEST<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;<small>January 2020 - December 2020</small></p>
             </div>
         </section>
 
@@ -481,6 +595,20 @@
             navbarMenu.classList.toggle('active');
         }
 
+        // Collapsible Sections
+        var collapsibles = document.getElementsByClassName("collapsible");
+        for (var i = 0; i < collapsibles.length; i++) {
+            collapsibles[i].addEventListener("click", function() {
+                this.classList.toggle("active");
+                var content = this.nextElementSibling;
+                if (content.style.maxHeight){
+                    content.style.maxHeight = null;
+                } else {
+                    content.style.maxHeight = content.scrollHeight + "px";
+                }
+            });
+        }
+
         // Load Twitter Widgets
         window.twttr = (function(d, s, id) {
             var js, fjs = d.getElementsByTagName(s)[0],
@@ -502,5 +630,6 @@
 
 </body>
 </html>
+
 
 
