--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             padding: 0;
             font-family: 'Roboto', sans-serif;
             color: #333;
-            background-color: #f5f5f5;
+            background-color: #f9f9f9;
         }
 
         /* Navigation Bar */
@@ -43,6 +43,7 @@
             font-weight: 700;
             color: #007BFF;
             text-decoration: none;
+            font-family: 'Montserrat', sans-serif;
         }
 
         .navbar-menu {
@@ -134,25 +135,25 @@
         .content {
             max-width: 1200px;
             margin: auto;
-            padding: 60px 20px;
+            padding: 80px 20px 60px;
         }
 
         .section {
-            margin-bottom: 60px;
+            margin-bottom: 80px;
         }
 
         .section h2 {
             font-size: 32px;
             font-weight: 700;
             color: #007BFF;
-            margin-bottom: 30px;
+            margin-bottom: 40px;
             text-align: center;
             font-family: 'Montserrat', sans-serif;
         }
 
         .about-content, .news-content, .cv-content {
             font-size: 18px;
-            line-height: 1.6;
+            line-height: 1.8;
             color: #555;
             max-width: 800px;
             margin: auto;
@@ -167,39 +168,52 @@
         .experience-container {
             display: flex;
             flex-wrap: wrap;
-            gap: 20px;
+            gap: 40px;
             justify-content: center;
         }
 
         .experience-item {
             background-color: #ffffff;
-            padding: 20px;
-            margin-bottom: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
             transition: transform 0.3s;
-            flex: 1 1 calc(45% - 20px);
-            max-width: calc(45% - 20px);
+            flex: 1 1 calc(45% - 40px);
+            max-width: calc(45% - 40px);
+            position: relative;
         }
 
         .experience-item:hover {
-            transform: translateY(-5px);
+            transform: translateY(-10px);
+            box-shadow: 0 8px 12px rgba(0,0,0,0.15);
         }
 
         .experience-item h3 {
             font-size: 24px;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
             color: #333;
             font-family: 'Montserrat', sans-serif;
         }
 
         .experience-item p {
-            margin: 5px 0;
+            margin: 10px 0;
         }
 
         .experience-item i {
             color: #007BFF;
             margin-right: 10px;
+        }
+
+        .experience-item::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 60px;
+            height: 5px;
+            background-color: #007BFF;
+            border-radius: 0 0 5px 5px;
         }
 
         @media (max-width: 768px) {
@@ -212,10 +226,10 @@
         /* News and Other Roles */
         .info-section {
             background-color: #ffffff;
-            padding: 30px;
-            border-radius: 8px;
+            padding: 40px;
+            border-radius: 12px;
             margin-bottom: 60px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
             max-width: 800px;
             margin: auto;
         }
@@ -223,14 +237,27 @@
         .info-section h3 {
             font-size: 24px;
             color: #007BFF;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
             font-family: 'Montserrat', sans-serif;
+            position: relative;
+        }
+
+        .info-section h3::after {
+            content: '';
+            position: absolute;
+            bottom: -10px;
+            left: 0;
+            width: 50px;
+            height: 3px;
+            background-color: #007BFF;
+            border-radius: 5px;
         }
 
         .info-section p {
             font-size: 18px;
-            margin-bottom: 15px;
+            margin-bottom: 20px;
             color: #555;
+            line-height: 1.8;
         }
 
         .info-section i {
@@ -241,24 +268,37 @@
         /* CV Section */
         .cv-item {
             background-color: #ffffff;
-            padding: 30px;
-            margin-bottom: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            padding: 40px;
+            margin-bottom: 40px;
+            border-radius: 12px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
             transition: transform 0.3s;
             max-width: 800px;
             margin: auto;
         }
 
         .cv-item:hover {
-            transform: translateY(-5px);
+            transform: translateY(-10px);
+            box-shadow: 0 8px 12px rgba(0,0,0,0.15);
         }
 
         .cv-item h3 {
             font-size: 24px;
-            margin-bottom: 20px;
+            margin-bottom: 25px;
             color: #333;
             font-family: 'Montserrat', sans-serif;
+            position: relative;
+        }
+
+        .cv-item h3::after {
+            content: '';
+            position: absolute;
+            bottom: -10px;
+            left: 0;
+            width: 50px;
+            height: 3px;
+            background-color: #007BFF;
+            border-radius: 5px;
         }
 
         .cv-item ul {
@@ -267,16 +307,16 @@
         }
 
         .cv-item li {
-            margin-bottom: 15px;
+            margin-bottom: 25px;
         }
 
         .cv-item li p {
-            margin: 0;
+            margin: 0 0 10px;
+            line-height: 1.6;
         }
 
         .cv-item .btn {
-            margin-top: 10px;
-            padding: 8px 15px;
+            padding: 10px 20px;
             background-color: #007BFF;
             color: #ffffff;
             text-decoration: none;
@@ -294,18 +334,24 @@
         .tweet-container {
             display: flex;
             flex-wrap: wrap;
-            gap: 20px;
-            margin-top: 20px;
+            gap: 40px;
+            margin-top: 40px;
             justify-content: center;
         }
 
         .tweet-box {
-            flex: 1 1 calc(45% - 20px);
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            border-radius: 10px;
+            flex: 1 1 calc(45% - 40px);
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            border-radius: 12px;
             overflow: hidden;
             background-color: #ffffff;
-            max-width: calc(45% - 20px);
+            max-width: calc(45% - 40px);
+            transition: transform 0.3s;
+        }
+
+        .tweet-box:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 8px 12px rgba(0,0,0,0.15);
         }
 
         @media (max-width: 768px) {
@@ -320,7 +366,7 @@
             background-color: #333;
             color: #ffffff;
             padding: 40px 20px;
-            margin-top: 40px;
+            margin-top: 60px;
         }
 
         .footer p {
@@ -411,8 +457,16 @@
                 padding: 10px 20px;
             }
 
+            .content {
+                padding: 60px 20px 40px;
+            }
+
+            .section {
+                margin-bottom: 60px;
+            }
+
             .info-section, .cv-item {
-                padding: 20px;
+                padding: 30px;
             }
         }
 
@@ -539,11 +593,11 @@
                 <h3>Conference Papers</h3>
                 <ul>
                     <li>
-                        <p>ExoSpikeNet: A Light Curve Analysis Based Spiking Neural Network for Exoplanet Detection, Comm. Systems and Network Technologies Conf [CSNT], 802-807</p>
+                        <p><strong>ExoSpikeNet:</strong> A Light Curve Analysis Based Spiking Neural Network for Exoplanet Detection, Comm. Systems and Network Technologies Conf [CSNT], 802-807</p>
                         <a href="#" class="btn"><i class="fa fa-download"></i> Download</a>
                     </li>
                     <li>
-                        <p>QGAPHnet: Quantum Genetic Algorithm Based Hybrid QLSTM Model for Soil Moisture Estimation, Geoscience and Remote Sensing Symposium [IGARSS 2024]</p>
+                        <p><strong>QGAPHnet:</strong> Quantum Genetic Algorithm Based Hybrid QLSTM Model for Soil Moisture Estimation, Geoscience and Remote Sensing Symposium [IGARSS 2024]</p>
                         <a href="#" class="btn"><i class="fa fa-download"></i> Download</a>
                     </li>
                     <!-- Add more papers as needed -->
@@ -553,11 +607,11 @@
                 <h3>Journal Papers</h3>
                 <ul>
                     <li>
-                        <p>Comparative Evaluation of Evolutionary Metaheuristic Algorithms for Hyper-parameter Selection in Short-Term Weather Forecasting, Springer Nature Studies in Computational Intelligence</p>
+                        <p><strong>Comparative Evaluation of Evolutionary Metaheuristic Algorithms:</strong> For Hyper-parameter Selection in Short-Term Weather Forecasting, Springer Nature Studies in Computational Intelligence</p>
                         <a href="#" class="btn"><i class="fa fa-download"></i> Download</a>
                     </li>
                     <li>
-                        <p>Benchmarking Metaheuristic Integrated Quantum Approximate Optimization Algorithm against Quantum Annealing, 11th CSAI Conference, London, Quantum Information Processing [QIP]</p>
+                        <p><strong>Benchmarking Metaheuristic Integrated Quantum Approximate Optimization Algorithm:</strong> Against Quantum Annealing, 11th CSAI Conference, London, Quantum Information Processing [QIP]</p>
                         <a href="#" class="btn"><i class="fa fa-download"></i> Download</a>
                     </li>
                     <!-- Add more papers as needed -->
@@ -630,6 +684,7 @@
 
 </body>
 </html>
+
 
 
 
