--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Anuvab Sen – Academic Portfolio</title>
-  <!-- Google Fonts: Poppins for headings and Merriweather for body text -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
-  <!-- Link to external CSS file -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -27,16 +25,14 @@
     </div>
   </header>
 
-
   <!-- Hero Section -->
-<section class="hero" id="home">
-  <div class="hero-content">
-    <img src="Anuvab.png" alt="Anuvab Sen" class="hero-img" style="width:180px; height:180px; border-radius:50%; margin: 0 auto 20px auto;">
-    <h1>Academic Portfolio</h1>
-    <p>Anuvab Sen – Researcher & PhD Student</p>
-  </div>
-</section>
-
+  <section class="hero" id="home">
+    <div class="hero-content">
+      <img src="Anuvab.png" alt="Anuvab Sen" class="hero-img">
+      <h1>Academic Portfolio</h1>
+      <p>Anuvab Sen – Researcher & PhD Student</p>
+    </div>
+  </section>
 
   <!-- About Section -->
   <section id="about">
@@ -49,7 +45,7 @@
   </section>
 
   <!-- Work Experience Section -->
-  <section id="work" style="background-color: var(--section-bg);">
+  <section id="work">
     <div class="section-container">
       <h2 class="section-title">Work Experience</h2>
       <div class="grid grid-2">
@@ -91,122 +87,11 @@
   </section>
 
   <!-- CV Section -->
-  <section id="cv" style="background-color: var(--section-bg);">
+  <section id="cv">
     <div class="section-container">
       <h2 class="section-title">Curriculum Vitae</h2>
       <div class="grid grid-2">
         <div class="card">
-          <h3>Conference Papers</h3>
-          <p>ExoSpikeNet: A Light Curve Analysis Based Spiking Neural Network for Exoplanet Detection, CSNT, pp.802-807</p>
-          <p>QGAPHnet: Quantum Genetic Algorithm Based Hybrid QLSTM Model for Soil Moisture Estimation, IGARSS 2024</p>
-          <p>HBO-DEViT: Vision Transformer Based Attention-Guided Evolutionary Architecture for Ship-Iceberg Categorisation, IGARSS 2024</p>
-          <p>QGAPHEnsemble: Adaptive Weighting for Short Term Weather Forecasting, CEC 2024</p>
-          <p>Differential Evolution for Hyper-Parameter Selection of a Transformer for Load Forecasting, SSCI</p>
-          <p>A Comparative Analysis on Metaheuristic Algorithms for Early Detection of Alzheimer’s, CICN</p>
-          <p>Differential Evolution for Hyper-Parameter Selection of a CNN for Speech Command Recognition, ECTA</p>
-          <p>DEM-ViT: Vision Transformer for Early Detection of Alzheimer’s, NCC</p>
-        </div>
-        <div class="card">
-          <h3>Journal Papers</h3>
-          <p>Comparative Evaluation of Evolutionary Metaheuristic Algorithms for Hyper-parameter Selection in Short-Term Weather Forecasting, Springer Nature Studies in Computational Intelligence</p>
-          <p>Benchmarking Metaheuristic Integrated Quantum Approximate Optimization Algorithm against Quantum Annealing, 11th CSAI Conference, London, QIP</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Image Slider Section -->
-  <section id="slider">
-    <div class="section-container">
-      <div class="slider">
-        <div class="slides">
-          <div class="slide"><img src="image/1.jpg" alt="Slide 1"></div>
-          <div class="slide"><img src="image/iiest.jpg" alt="Slide 2"></div>
-          <div class="slide"><img src="image/3.jpg" alt="Slide 3"></div>
-        </div>
-        <div class="navigation">
-          <button id="prev">&#10094;</button>
-          <button id="next">&#10095;</button>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Tweets Section -->
-  <section id="tweets">
-    <div class="section-container">
-      <h2 class="section-title">Tweets</h2>
-      <div class="grid grid-2">
-        <div class="card">
-          <blockquote>
-            <p>Banff National Park, Alberta. Summer 2023 💜</p>
-            <cite>— Anuvab Sen, April 1, 2024</cite>
-          </blockquote>
-        </div>
-        <div class="card">
-          <blockquote>
-            <p>Niagara Falls on a Saturday is all I crave for 😁</p>
-            <cite>— Anuvab Sen, July 8, 2023</cite>
-          </blockquote>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Contact Section -->
-  <section id="contact">
-    <div class="section-container">
-      <h2 class="section-title">Contact Me</h2>
-      <form class="contact_form" method="post" action="#">
-        <input type="text" id="name" name="name" placeholder="Your Name" required>
-        <input type="email" id="email" name="email" placeholder="Your Email" required>
-        <textarea id="message" name="message" rows="6" placeholder="Your Message" required></textarea>
-        <button type="submit">Send Message</button>
-      </form>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <p>"The most important thing is to enjoy your life – to be happy – it's all that matters." – Audrey Hepburn</p>
-    <p>&copy; Anuvab Sen 2024 | All Rights Reserved</p>
-  </footer>
-
-  <!-- JavaScript for Interactivity -->
-  <script>
-    // Mobile Navigation Toggle
-    function toggleMenu() {
-      const menu = document.getElementById('navMenu');
-      menu.classList.toggle('active');
-    }
-    // Simple Image Slider
-    const slides = document.querySelector('.slides');
-    const slideElements = document.querySelectorAll('.slide');
-    const prevBtn = document.getElementById('prev');
-    const nextBtn = document.getElementById('next');
-    let currentIndex = 0;
-    function showSlide(index) {
-      if(index < 0) {
-        currentIndex = slideElements.length - 1;
-      } else if(index >= slideElements.length) {
-        currentIndex = 0;
-      } else {
-        currentIndex = index;
-      }
-      slides.style.transform = 'translateX(' + (-currentIndex * 100) + '%)';
-    }
-    prevBtn.addEventListener('click', () => {
-      showSlide(currentIndex - 1);
-    });
-    nextBtn.addEventListener('click', () => {
-      showSlide(currentIndex + 1);
-    });
-    // Dark Mode Toggle (optional)
-    function toggleDarkMode() {
-      document.body.classList.toggle('dark-mode');
-    }
-  </script>
-  <!-- FontAwesome for Icons (if needed) -->
-  <script src="https://kit.fontawesome.com/63c99c920d.js" crossorigin="anonymous"></script>
-</body>
-</html>
+          <
+::contentReference[oaicite:24]{index=24}
+ 
